--- a/site/index.html
+++ b/site/index.html
@@ -42,7 +42,7 @@
     <h2>Services</h2>
 
     <a href="portfolio.html" class="service-card">
-      <img src="images/calligraphy.jpg" alt="Traditional calligraphy on paper">
+      <img src="images/calligraphy.jpg" alt="Traditional calligraphy of gold ink on paper">
       <span class="service-label">Traditional Calligraphy</span>
     </a>
 
@@ -83,7 +83,7 @@
       <div class="home-about-inner">
 
         <div class="home-about-photo">
-          <img src="images/me.png" alt="Mirabelle">
+          <img src="images/me.png" alt="Headshot of Woman in smiling in black blouse">
         </div>
 
         <div class="home-about-text">
