--- a/site/services.html
+++ b/site/services.html
@@ -41,7 +41,7 @@
       <div class="service-block">
 
         <div class="service-images">
-          <img src="images/studio-1.jpg" alt="Custom in-studio calligraphy">
+          <img src="images/studio-1.jpg" alt="Black placecards on white satin fabric">
         </div>
 
         <h2>In-Studio Commissions</h2>
@@ -59,7 +59,7 @@
       <div class="service-block">
 
         <div class="service-images">
-          <img src="images/event-1.jpg" alt="Live calligraphy and engraving at an event">
+          <img src="images/event-1.jpg" alt="Gold ink caligraphy on black paper">
         </div>
 
         <h2>Live Event Calligraphy</h2>
