--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="noindex, nofollow">
 
   <title>Cherished Calligraphy | Dallas Calligrapher & Engraver</title>
 
